force-app/main/default/objects/PHSS_Error_Logger__c/PHSS_Error_Logger__c.object-meta.xml
<CustomObject>
    <label>PHSS Error Logger</label>
    <nameField>
        <displayFormat>Error-{000000000}</displayFormat>
        <label>PHSS Error Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHSS Error Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>