force-app/main/default/objects/PHSS_Error_Logger__c/fields/Formatted_Record__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Record__c</fullName>
    <label>Formatted Record</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>