force-app/main/default/objects/PHSS_Error_Logger__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>