force-app/main/default/objects/PHSS_Error_Logger__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <label>Record</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>